--- a/ElasticQuery.html
+++ b/ElasticQuery.html
@@ -336,34 +336,9 @@ function refresh_query(){
 		        if (data_response.length > 0) {
 		            for (var i = 0; i < data_response.length; i++) {
 				data[i] = data_response[i]._source;
-				if (i==0){
-					var header = '<thead><tr>';
-					$.each(data_response[i]._source, function(field,value) {
-						if(selected_es_fields[field] != undefined){
-							header=header+'<th>'+field+'</th>';
-							$('#csv').append(field+';');
-						}
-					});
-					$('#worksheet').append(header+'</tr></thead><tbody id="worksheetbody"></tbody>');
-				}
-				var worksheet = document.getElementById("worksheetbody");
-				var line = worksheet.insertRow(-1);
-				$.each(data_response[i]._source, function(field,value) {
-					if(selected_es_fields[field] != undefined){
-						if (field.indexOf("date") !=-1){
-							value = $.datepicker.formatDate(date_format, new Date(value));
-						}
-						line.insertCell().innerHTML = value;
-					}
-				});
 		            }
-			    $('#worksheet_count').append(data_response.length + ' lines in result');
 			    $('#info').append('<table class="table condensed-table"><tr><td>Response time of last query</td><td>'+response.took+'ms</td></tr><tr><td>Result lines of last query</td><td>'+data_response.length+'</td></table>');
-			    if (mod_pivot){
-				$("#pivot").pivotUI($('#worksheet'),null,true);
-				$( ".pvtRenderer").addClass("form-control input-sm");
-				$( ".pvtAggregator").addClass("form-control input-sm");
-			    }
+			populate_queryresult();
 		        }
 			else {
 				alert('no result');
@@ -372,6 +347,37 @@ function refresh_query(){
         });
 }
 
+//Populate query result in UI
+function populate_queryresult(){
+    	$('#worksheet_count').append(data.length + ' lines in result');
+	for (var i = 0; i < data.length; i++) {
+		if (i==0){
+			var header = '<thead><tr>';
+			$.each(data[i], function(field,value) {
+				if(selected_es_fields[field] != undefined){
+					header=header+'<th>'+field+'</th>';
+					$('#csv').append(field+';');
+				}
+			});
+			$('#worksheet').append(header+'</tr></thead><tbody id="worksheetbody"></tbody>');
+		}
+		var worksheet = document.getElementById("worksheetbody");
+		var line = worksheet.insertRow(-1);
+		$.each(data[i], function(field,value) {//for each line of result
+			if(selected_es_fields[field] != undefined){//only for selected fields
+				if (field.indexOf("date") !=-1){
+					value = $.datepicker.formatDate(date_format, new Date(value));
+				}
+				line.insertCell().innerHTML = value;
+			}
+		});
+	}
+	if (mod_pivot){
+		$("#pivot").pivotUI($('#worksheet'),null,true);
+		$( ".pvtRenderer").addClass("form-control input-sm");
+		$( ".pvtAggregator").addClass("form-control input-sm");
+	}
+}
 
 $(document).ready(function() {
 	//UI tabs
